<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY app_name "MindLevel">
    <!ENTITY integration "default">
]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="app_integration">&integration;</string>
    <string name="app_authority">net.mindlevel.provider</string>
    <string name="app_description">
        In most peoples day-to-day life they perform repetitive and seemingly pointless tasks, I\'m sure that you
        can relate. Repetitive tasks that we have grown to think that we like, things that take up a lot of our time
        but don\'t add anything to our lives.
        \n\nThe things that we won\'t remember when we grow old.
        \n\nI think that most people don\'t even appreciate these parts of their lives, but it\'s not easy to find an
        option of doing something more exciting, something that would be worth remembering.
        \n\nThis is my attempt of giving you that option.
    </string>
    <string name="backend_address">https://api.mindlevel.net/</string>
    <!-- <string name="backend_address">http://192.168.42.37:8080/</string> -->
    <string name="bucket_address">https://s3.eu-central-1.amazonaws.com/mindlevel/</string>
    <string name="challenges_file">&integration;-challenges.txt</string>
    <string name="users_file">&integration;-users.txt</string>
    <string name="field_delim">M-delim-M</string>
    <string name="facebook_address">https://facebook.com/mindlvl/</string>

    <!-- Titles -->
    <string name="title_feed">Feed</string>
    <string name="title_challenges">Challenges</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="title_login">Sign in</string>
    <string name="title_highscore">Highscore</string>
    <string name="title_facebook">Our Facebook</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_challenge_tree">Challenge Tree</string>
    <string name="title_challenge_suggestion">Suggest challenge</string>
    <string name="title_chat">Chat</string>

    <!-- Small Titles -->
    <string name="title_score">Score: %1$s</string>
    <string name="title_level">Level: %1$s</string>

    <!-- Core words -->
    <string name="user">User</string>
    <string name="challenge">Challenge</string>
    <string name="accomplishment">Accomplishment</string>
    <string name="contributor">Contributor</string>

    <!-- Hints -->
    <string name="hint_upload_description">Describe how you accomplished the challenge</string>
    <string name="hint_user_description">Describe yourself, or write anything really</string>
    <string name="hint_upload_title">Your title</string>
    <string name="hint_suggestion_title">The title</string>
    <string name="hint_suggestion_description">Describe how to accomplish the challenge</string>
    <string name="hint_comment_box">Leave comment…</string>

    <!-- Login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>

    <!-- Integration -->
    <string name="integration_successful">Successfully joined %1$s, no responsibility will be taken of what
        material is on the other side of this login. You need to be an adult according to your countries
        legislation to use this integration.</string>
    <string name="integration_failed">Failed to join with that password</string>
    <string name="integration_description">You manage to get into the secret section, if you have gotten a password we do not take any responsibility for what content that will display after the login. You have to be an adult in all senses of the word by your countries laws to use this.</string>
    <string name="integration_title">Secret section</string>
    <string name="integration_try_button">Try password!</string>
    <string name="integration_default_button">Use normal &app_name;</string>
    <string name="integration_normal">Using normal &app_name;</string>

    <!-- Actions -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register">Register</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_upload">Upload</string>
    <string name="action_like">✊</string>
    <string name="action_share_using">Share using</string>
    <string name="action_suggest">Suggest</string>

    <!-- Successful -->
    <string name="successful_upload">Upload was successful</string>
    <string name="successful_registration">Successfully registered as %1$s</string>
    <string name="successful_edit">Successful edit!</string>
    <string name="successful_suggestion">Thanks!</string>

    <!-- Errors -->
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_email_username">Username should not be an e-mail</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password2">The passwords don\'t match</string>
    <string name="error_incorrect_password">Incorrect password, did you forget to register?</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_image">No image chosen, use buttons to the right</string>
    <string name="error_image_loading">Failed to load image</string>
    <string name="error_network">No network, try again later</string>
    <string name="error_backend">Can\'t reach the server, try again later</string>
    <string name="error_not_found">The squirrels came up with nothing</string>
    <string name="error_offline">Not available offline</string>
    <string name="error_no_description">Please add a description</string>
    <string name="error_upload_timeout">Upload timed out, try again</string>
    <string name="error_network_login">Network error, try to login.</string>
    <string name="error_network_code">%1$s: Network error, try again.</string>
    <string name="error_user_exists">User already exists</string>

    <!--  Tips -->
    <string name="tip">Tip: %1$s</string>
    <string name="tip_like">Double click an image to like it</string>
    <string name="tip_points">After completing one challenge you can like images</string>
    <string name="tip_contributor">Contributors receive all points too</string>
    <string name="tip_share">You can share images to social media</string>
    <string name="tip_swipe">Swipe the screen to navigate</string>
    <string name="tip_new">Click the tip to see a new one</string>

    <!-- Progress motivations -->
    <string name="progress_satelite">Moving satellites into position</string>
    <string name="progress_order">Restoring order</string>
    <string name="progress_petting">Brb, petting animals</string>
    <string name="progress_sleep">Just one more snooze…</string>

    <!-- About -->
    <string name="creator">Creator:</string>
    <string name="licences">Licences</string>
    <string name="link_icons">https://icons8.com/</string>
    <string name="icon_thanks">Thanks to Icons8 for providing awesome icons</string>
    <string name="author">Lukas Klingsbo</string>
    <string name="about_email">me@lukas.fyi</string>
    <string name="about_site">http://lukas.fyi</string>

    <!-- Accomplishment -->
    <string name="accomplishment_by">By:</string>
    <string name="challenge_title">Challenge:</string>

    <!-- Feed -->
    <string name="latest">Latest</string>
    <string name="feed_user">Showing accomplishments for user %1$s</string>
    <string name="feed_challenge">Showing accomplishments for challenge \"%1$s\"</string>
    <string name="contributors">Contributors</string>

    <!-- Terms and Privacy-->
    <string name="terms_agree">By using &app_name; you agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="hint_email">Your E-mail address</string>
    <string name="accessibility_user_image">The user\'s image</string>
    <string name="logo">logo</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Tutorial-->
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_description">
        The aim of the game is simple - choose a challenge, complete it and upload a picture of the result.
        Other users can then like your images and you get points. To like an image, double click on it.
    </string>
    <string name="tutorial_description_more">
        The more points you get and challenges you finish the more challenges and other peoples accomplishments
        you can see.
    </string>
    <string name="tutorial_challenge">This will take you to challenges</string>
    <string name="tutorial_accomplishment">This will take you to an accomplishment, an accomplishment is a
        finished challenge\n(image uploaded by a user)</string>

    <string name="tutorial_icons">Most icons in the game should be self-explanatory, but the following two are
        special:
    </string>
    <string name="tutorial_got_it">Got it!</string>

    <!-- Deprecated tutorial -->
    <string name="tutorial_camera">Take a picture from within the app</string>
    <string name="tutorial_gallery">Choose a picture from your local gallery</string>
    <string name="tutorial_highscore">See the top players</string>
    <string name="tutorial_user">Return to your own profile</string>
    <string name="tutorial_edit">Edit what you are currently viewing</string>
    <string name="tutorial_logout">Log out of the app</string>
    <string name="tutorial_upload">Upload a picture for a finished challenge</string>
    <string name="tutorial_share">Share the current picture</string>
    <string name="tutorial_location">The tutorial can always be opened in the top right corner</string>

    <!-- Permissions -->
    <string name="permission_sharing_denied">Denied sharing permission</string>

    <!-- Comments -->
    <string name="comments">Comments (%1$d)</string>

</resources>
