<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/accomplishment"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_challenges"
        android:icon="@drawable/challenge"
        android:title="@string/title_challenges" />

    <item
        android:id="@+id/navigation_highscore"
        android:icon="@drawable/highscore"
        android:title="@string/title_highscore" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/send"
        android:title="@string/title_chat" />

</menu>
