<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.mindlevel.activity.TutorialActivity"
    tools:showIn="@layout/activity_tutorial">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingBottom="30dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="14pt"
            android:typeface="monospace"
            android:text="@string/tutorial"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/description"
            android:text="@string/tutorial_description"
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/description_more"
            android:text="@string/tutorial_description_more"
            android:layout_marginBottom="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:gravity="center_horizontal"
            android:text="@string/tutorial_icons"
            android:textStyle="bold" />

        <TextView
            android:drawableTop="@drawable/challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tutorial_challenge" />

        <TextView
            android:drawableTop="@drawable/accomplishment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tutorial_text_margin"
            android:gravity="center"
            android:text="@string/tutorial_accomplishment" />

        <TextView
            android:drawableTop="@drawable/tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tutorial_text_margin"
            android:gravity="center"
            android:text="@string/tutorial_location" />

        <Button
            android:id="@+id/tutorial_finished"
            android:text="@string/tutorial_got_it"
            android:layout_marginTop="@dimen/tutorial_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
