<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:background="@drawable/bg_transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.mindlevel.activity.AboutActivity"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_opacity"
        android:layout_margin="15dp"
        android:paddingBottom="30dip"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/title"
            android:textSize="14pt"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/version"
            android:textStyle="bold"
            android:typeface="monospace"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/description"
            android:text="@string/app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/author"
            android:textStyle="bold"
            android:text="@string/author"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="end"
            android:textColorLink="@color/colorPrimary"
            android:text="@string/about_site"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:gravity="end"
            android:textColorLink="@color/colorPrimary"
            android:text="@string/about_email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:textStyle="bold"
            android:textSize="10pt"
            android:text="@string/licences"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/icon_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:textColorLink="@color/colorPrimary"
            android:text="@string/link_icons"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
</ScrollView>
