<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.mindlevel.activity.TutorialActivity"
    tools:showIn="@layout/activity_tutorial">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:paddingBottom="30dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:textStyle="bold"
            android:textSize="14pt"
            android:typeface="monospace"
            android:text="@string/integration_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/description"
            android:text="@string/integration_description"
            android:layout_marginBottom="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/integration_default"
            android:text="@string/integration_default_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/integration_finished"
            android:text="@string/integration_try_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
