<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.mindlevel.activity.UploadActivity"
    tools:showIn="@layout/activity_upload">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/inner_upload_form"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="5dip" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/error_text"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/challenge_title"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/title"
                android:hint="@string/hint_suggestion_title"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect" />

            <EditText
                android:id="@+id/description"
                android:hint="@string/hint_suggestion_description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/upload_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="24dp"
                android:text="@string/action_suggest"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
